# vibe2crazy

./: .gitignore  CLAUDE.md  Prompts.txt  README.md  README_DEV.md  deploy.sh  release.sh  vibe2crazy.service
backend/: .env.example  .gitignore  alembic.ini  init_db.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1fb2802d0c86_add_direct_on_branch_to_tasks.py  6b947996d2bb_create_command_queue_table.py  80f2583432cf_add_tunnel_config_table.py  a1b2c3d4e5f6_add_server_default_for_tunnel_tls.py
backend/app/: __init__.py  auth.py  config.py  database.py  logging_config.py  main.py  models.py  rate_limiters.py  schemas.py  tls_utils.py
backend/app/routers/: __init__.py  auth.py  command_presets.py  config.py  files.py  filesystem.py  git.py  global_terminal.py  matrix.py  projects.py  queues.py  search.py  symbols.py  tasks.py  terminals.py  tunnel.py
backend/app/services/: __init__.py  ctags_service.py  file_service.py  filesystem_service.py  git_service.py  grep_service.py  network_service.py  queue_service.py  (+3 more)
backend/tests/: conftest.py  test_changed_files_pagination.py  test_file_service.py  test_files_hash.py  test_filesystem_router.py  test_filesystem_service.py  test_git_init.py  test_git_router.py  test_git_service.py  test_git_service_pagination.py  test_git_service_sync.py  test_integration_sync_workflow.py  test_matrix.py  test_models.py  test_projects.py  test_queue_model.py  test_queue_service.py  test_queues_router.py  test_task_monitor_queue.py  test_task_monitor_service.py  test_tmux_service_send_keys.py
(+195 files in other folders)
